# cat-guardians

cat-guardians-api/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
cat-guardians-api/documentation/: allure-setup.md  pre-commit-config.md
cat-guardians-api/scripts/: auto_bump_script.sh  check_and_terminate_instance.sh  ecr_image_build_push.sh  manual_build_push_to_aws_ecr.sh  ssl_renew.sh
cat-guardians-api/src/: VERSION
cat-guardians-api/src/adoption/: adoption_permission.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
cat-guardians-api/src/adoption/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
cat-guardians-api/src/api/: settings.py  settings_local.py  urls.py  yasg.py
cat-guardians-api/src/api/docker/: Dockerfile
cat-guardians-api/src/core/: config_logging.yml  database_conf.py  dev_tools_conf.py  logger.py
cat-guardians-api/src/feedback/: models.py  urls.py  views.py
cat-guardians-api/src/feedback/migrations/: 0001_initial.py  0002_initial.py
cat-guardians-api/src/found_form/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
cat-guardians-api/src/found_form/migrations/: 0001_initial.py  0002_initial.py
cat-guardians-api/src/pets/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
cat-guardians-api/src/users/: admin.py  auth.py  mixins.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
cat-guardians-api/src/utils/: mixins.py  retrying_conf.py
cat-guardians-api/tests/: conftest.py
cat-guardians-api/tests/integration_tests/: test_adoption_api.py  test_found_api.py  test_pets_api.py  test_users_api.py
cat-guardians-api/tests/unit_tests/: test_adoption_permissions.py  test_commands.py  test_database_conf.py  test_pets_serializers.py  test_services.py  test_users_auth.py  test_users_utils.py
(+273 files in other folders)
